--- a/config/default.yml
+++ b/config/default.yml
@@ -275,6 +275,14 @@ PreCommit:
       - '**/*.ex'
       - '**/*.exs'
 
+  ErbLint:
+    enabled: false
+    description: 'Analyze with erb-lint'
+    required_executable: 'erblint'
+    install_command: 'gem install erblint'
+    include:
+      - '**/*.html.erb'
+
   EsLint:
     enabled: false
     description: 'Analyze with ESLint'
